Fixed spacing on home page and text decoration on a tags

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -11,6 +11,10 @@ body {
   text-decoration: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 .app {
   display: flex;
   flex-direction: column;
